sbt project import: don't import javacOptions at project level, only import at module level #SCL-18698 fixed
SBT's root project concept is not the same as IDEA's "Project".
IDEA root project javacOptions are inherited by all modules (if not overridden for module explicitly in File | Settings | Build, Execution, Deployment | Compiler | Java Compiler).
SBT's root project is just another sbt project (which is converted to IDEA "Module").
It's settings are not inherited by sub-projects.
So we simply should ignore IDEA project java compiler options when importing sbt project.

NOTE: this is relevant to additional compiler options AND explicitly-handled options, like -source (language level), -target, --release, etec...
So, if a user manually changes IDEA-project-level settings (like project language level,  project target bytecode level, "generate debugging info", etc...) these changes will NOT be discarded on the next sbt project reimport.